moved player to topbar, cleaned up lint issues

--- a/frontend/src/components/Expression.css
+++ b/frontend/src/components/Expression.css
@@ -1,9 +1,9 @@
 #expression-container {
-    width: 100%;
-    /* border: 2px solid red; */
+    /* border: 2px solid blue; */
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 #expression {
