--- a/frontend/src/components/TopBar.css
+++ b/frontend/src/components/TopBar.css
@@ -5,4 +5,5 @@
     flex-direction: row;
     justify-content: space-around;
     background-color: var(--bg-color);
+    /* border: 2px solid green; */
 }
