--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -115,6 +115,7 @@ tr:hover {
     margin-right: 10px;
     padding: 3px;
     height: fit-content;
+    font-weight: normal;
 }
 
 /* Testing borders {{{ */
