idk what im doing

--- a/frontend/src/components/SongCard.css
+++ b/frontend/src/components/SongCard.css
@@ -44,7 +44,7 @@
     text-align: center;
 }
 
-#songImg {
+.song-card-song-img {
     max-width: 80%;
     max-height: 80%;
     border-radius: 5%;
