--- a/frontend/src/components/Expression.css
+++ b/frontend/src/components/Expression.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    /* width: 50%; */
 }
 
 #expression {
