Displays current player volume & added functional "Down" button to lower player volume
"Down" button also updates the displayed player volume

--- a/frontend/src/components/Player.css
+++ b/frontend/src/components/Player.css
@@ -1,4 +1,4 @@
-.stream-buttons-container {
+.stream-buttons-container, .volume-control-container  {
     background-color: var(--bg-color);
     display: flex;
     flex-direction: row;
