moved volume control

--- a/frontend/src/components/Player.css
+++ b/frontend/src/components/Player.css
@@ -4,5 +4,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.stream-buttons-container {
     width: 25%;
 }
